--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -1,9 +1,9 @@
 .section{
   padding: 30px 0;
   width: 100%;
-  height: auto;
+  height: 400px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
 }
 
@@ -61,5 +61,5 @@
 }
 
 .copy h1{
-  font-size: 14px;
+  font-size: 11px;
 }
