--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,6 +5,9 @@
   --bg4: rgba(50, 50, 50);
   --bg5: rgba(60, 60, 60);
   --color1: rgb(200, 200, 200);
+  --color2: rgb(177, 177, 177);
+  --color3: rgb(145, 145, 145);
+  --color4: rgb(121, 121, 121);
 
 }
 
