--- a/src/components/Layout/TopMenu/TopMenu.module.css
+++ b/src/components/Layout/TopMenu/TopMenu.module.css
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, .9);
   z-index: 1000;
 }
 
@@ -47,7 +47,7 @@
   left: 0;
   width: 250px;
   height: 100vh;
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, .95);
   transition: all .5s;
   z-index: 1000;
 }
@@ -74,8 +74,9 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   cursor: pointer;
 }
 
