--- a/src/layouts/BasicLayout/BasicLayout.module.css
+++ b/src/layouts/BasicLayout/BasicLayout.module.css
@@ -1,5 +1,5 @@
-/* .relative{
-  padding-top: 0px;
+.relative{
+  padding-top: 100px;
 } 
 
 @media screen and (min-width: 1350px) {
@@ -9,4 +9,4 @@
     display: flex;
   } 
 
-} */
+}
