--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import './colors.css';
+@import './slide.css';
 
 @font-face {
   font-family: 'Mulish';
@@ -20,7 +21,7 @@
   margin: 0;
   font-family: 'Mulish' !important;
   font-weight: 200 !important;
-  color: var(--color1);
+  color: azure;
   cursor: default;
 }
 
