--- a/src/styles/slide.css
+++ b/src/styles/slide.css
@@ -12,7 +12,7 @@
 
 
 .swiper {
-  padding: 0 30px !important;
+  padding: 0 50px !important;
   width: 100%;
   height: 100%;
 }
@@ -47,11 +47,9 @@
   object-fit: cover;
 }
 
-@media screen and (min-width:768px){
+/* @media screen and (min-width:768px){
 
   .swiper-slide {
-  
-    /* Center slide text vertically */
     display: flex;
   }
   
@@ -99,4 +97,4 @@
     object-fit: cover;
   }
 
-}
+} */
