--- a/src/components/Layout/Wallpaper/Wallpaper.module.css
+++ b/src/components/Layout/Wallpaper/Wallpaper.module.css
@@ -1,4 +1,5 @@
 .wallpaper{
+  padding: 0 10px;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -10,4 +11,22 @@
 .wallpaper img{
   width: 100%;
   height: auto;
+}
+
+@media screen and (min-width:768px) and (max-width:1024px){
+
+  .wallpaper img{
+    width: 80%;
+    height: auto;
+  }
+
+}
+
+@media screen and (min-width:1024px){
+
+  .wallpaper img{
+    width: 50%;
+    height: auto;
+  }
+
 }
